--- a/DM100/Info.plist
+++ b/DM100/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>Domilink</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>APP need the Location to planning route when you want to find the unit.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
