--- a/DM100/Info.plist
+++ b/DM100/Info.plist
@@ -2,21 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>Domilink</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>APP need the Location to planning route when you want to find the unit.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>APP need the Location to planning route when you want to find the unit.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>APP need the Location to planning route when you want to find the unit.</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Domilink</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,9 +19,20 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>APP need the Location to planning route when you want to find the unit.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>APP need the Location to planning route when you want to find the unit.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>APP need the Location to planning route when you want to find the unit.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
